--- a/Drugstorage/Table.html
+++ b/Drugstorage/Table.html
@@ -41,27 +41,29 @@
         <i class="layui-icon layui-icon-add-1"></i>
         新增
     </button>
-    <button class="pear-btn pear-btn-danger pear-btn-md" lay-event="batchRemove">
-        <i class="layui-icon layui-icon-delete"></i>
-        删除
+    <button id="uploadBtn" class="pear-btn pear-btn-primary pear-btn-md" lay-event="upload">
+        文件上传
     </button>
 </script>
 
 <script type="text/html" id="leftbar">
-    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i>
+<!--    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i>
     </button>
-    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">删除<i
-            class="layui-icon layui-icon-delete"></i></button>
+    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">
+        <i class="layui-icon layui-icon-delete">
+            删除
+        </i>
+    </button>-->
 </script>
 
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery', 'common', 'context'], function () {
+    layui.use(['table', 'form', 'jquery', 'context','upload'], function () {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
-        let common = layui.common;
+        let upload = layui.upload;
         const context = layui.context;
 
 
@@ -91,11 +93,6 @@
                     title: '数量',
                     field: 'count',
                     align: 'center'
-                },
-                {
-                    title: '申请人',
-                    field: 'applicantId',
-                    align: 'center',
                 },
                 {
                     title: '入库人Id',
@@ -149,6 +146,8 @@
                 window.refresh();
             } else if (obj.event === 'batchRemove') {
                 window.batchRemove(obj);
+            }else if (obj.event === 'upload'){
+
             }
         });
 
@@ -171,6 +170,25 @@
                 content: 'add.html'
             });
         }
+
+        window.upload = upload.render({
+            elem: '#uploadBtn',
+            url:'https://localhost:7283/v1/api/Drugstorage/Upload',
+            done:function (result){
+                layer.msg(result.message,{
+                    icon:1,
+                    time:1000
+                },function (){
+                    table.reload('base-table')
+                });
+            },
+            error: function (result){
+                layer.msg(result.message,{
+                    icon:2,
+                    time:1000
+                });
+            }
+        });
 
         window.edit = function (obj) {
             layer.open({
