--- a/Drugstorage/Table.html
+++ b/Drugstorage/Table.html
@@ -59,12 +59,13 @@
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery', 'context','upload'], function () {
+    layui.use(['table', 'form', 'jquery','common','context','common'], function() {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
-        let upload = layui.upload;
+        let common = layui.common;
         const context = layui.context;
+        let upload = layui.upload;
 
 
         let MODULE_PATH = "operate/";
