--- a/Ward/Table.html
+++ b/Ward/Table.html
@@ -55,10 +55,11 @@
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery','context'], function() {
+    layui.use(['table', 'form', 'jquery','common','context'], function() {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
+        let common = layui.common;
         const context = layui.context;
 
 
