--- a/Department/edit.html
+++ b/Department/edit.html
@@ -43,8 +43,8 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">科室状态</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="status" value="0" title="关闭" checked>
-                        <input type="radio" name="status" value="1" title="开启">
+                        <input type="radio" name="status" value="0" title="开启" checked>
+                        <input type="radio" name="status" value="1" title="关闭">
                     </div>
                 </div>
             </div>
