--- a/Manufacturer/edit.html
+++ b/Manufacturer/edit.html
@@ -19,7 +19,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">厂家名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="manufacturerName" required lay-verify="required" autocomplete="off" placeholder="请输入家名称" class="layui-input">
+                        <input type="text" name="manufacturerName" required lay-verify="required" autocomplete="off" placeholder="请输入厂家名称" class="layui-input">
                     </div>
                 </div>
 
