--- a/Doctor/add.html
+++ b/Doctor/add.html
@@ -96,6 +96,19 @@
         let form = layui.form;
         let $ = layui.jquery;
 
+        $.ajax({
+            url: 'https://localhost:7283/v1/api/Doctor/departmentOption',
+            type: 'get',
+            success: function (result){
+                if (result != null){
+                    for (let i =0;i<result.length;i++){
+                        $('#departmentSelect').append('<option value="'+result[i].id +'">' + result[i].departmentName + '</option>')
+                    }
+                    form.render('select');
+                }
+            }
+        });
+
         form.on('submit(save)', function (data) {
             $.ajax({
                 url: 'https://localhost:7283/v1/api/Doctor',
